testsuite/tests/typecheck/should_fail/FrozenErrorTests.stderr

FrozenErrorTests.hs:12:12: error:
    Couldn't match type ‘Int’ with ‘Bool’
    Inaccessible code in
      a pattern with constructor: MkT3 :: forall a. (a ~ Bool) => T a,
      in a case alternative
    In the pattern: MkT3
    In a case alternative: MkT3 -> ()
    In the expression: case x of { MkT3 -> () }

FrozenErrorTests.hs:26:9: error:
    Occurs check: cannot construct the infinite type: a0 ~ [a0]
    Expected type: [a0]
      Actual type: F a0 Bool
    Relevant bindings include
      test1 :: a0 (bound at FrozenErrorTests.hs:26:1)
    In the expression: goo1 False undefined
    In an equation for ‘test1’: test1 = goo1 False undefined

FrozenErrorTests.hs:29:15: error:
    Couldn't match type ‘Int’ with ‘[Int]’
    Expected type: [[Int]]
      Actual type: F [Int] Bool
    In the first argument of ‘goo2’, namely ‘(goo1 False undefined)’
    In the expression: goo2 (goo1 False undefined)
    In an equation for ‘test2’: test2 = goo2 (goo1 False undefined)

FrozenErrorTests.hs:30:9: error:
    Couldn't match type ‘Int’ with ‘[Int]’
    Expected type: [[Int]]
      Actual type: F [Int] Bool
    In the expression: goo1 False (goo2 undefined)
    In an equation for ‘test3’: test3 = goo1 False (goo2 undefined)

FrozenErrorTests.hs:45:15: error:
    Couldn't match type ‘T2 c0 c0’ with ‘M (T2 (T2 c0 c0) c0)’
    Expected type: T2 (M (T2 (T2 c0 c0) c0)) (T2 (T2 c0 c0) c0)
      Actual type: F (T2 (T2 c0 c0) c0) Bool
    Relevant bindings include
      test4 :: T2 (T2 c0 c0) c0 (bound at FrozenErrorTests.hs:45:1)
    In the first argument of ‘goo4’, namely ‘(goo3 False undefined)’
    In the expression: goo4 (goo3 False undefined)
    In an equation for ‘test4’: test4 = goo4 (goo3 False undefined)

FrozenErrorTests.hs:46:9: error:
    Couldn't match type ‘T2 c0 c0’ with ‘M (T2 (T2 c0 c0) c0)’
    Expected type: T2 (M (T2 (T2 c0 c0) c0)) (T2 (T2 c0 c0) c0)
      Actual type: F (T2 (T2 c0 c0) c0) Bool
    Relevant bindings include
      test5 :: T2 (T2 c0 c0) c0 (bound at FrozenErrorTests.hs:46:1)
    In the expression: goo3 False (goo4 undefined)
    In an equation for ‘test5’: test5 = goo3 False (goo4 undefined)
